[Fix] Fix text align to justify

--- a/Style.css
+++ b/Style.css
@@ -49,6 +49,9 @@ a:hover { color: inherit; }
 .desc, .subDesc{
     padding-left: 1rem!important;
     margin-left: 1rem!important;
+    padding-right: 1rem!important;
+    margin-right: 1rem!important;
+    text-align: justify;
 }
 
 .desc::marker{
